<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/customerHome"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/icon_fav_border"
        android:title="@string/fav"/>
    <item
        android:id="@+id/searchCommerceOrService"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/search_menu" />
    <item
        android:id="@+id/historial"
        android:enabled="true"
        android:icon="@drawable/icon_history"
        android:title="@string/hist"/>
    <item
        android:id="@+id/editProfile"
        android:enabled="true"
        android:icon="@drawable/icon_manage_acc"
        android:title="@string/edt_profile" />
</menu>