<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commerce.view.CommerceSignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:src="@drawable/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_commerce_data"
                style="@style/TextViewStyle"
                android:layout_marginTop="30dp"
                android:text="Datos del establecimiento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <EditText
                android:id="@+id/edt_name"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/name"
                android:maxLines="1"
                android:paddingLeft="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_commerce_data" />

            <EditText
                android:id="@+id/edt_phone_number"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_name" />

            <Spinner
                android:id="@+id/spinner_categories"
                style="@style/SpinnerStyle"
                android:layout_marginTop="30dp"
                android:entries="@array/category_items"
                android:paddingStart="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_phone_number" />

            <TextView
                android:id="@+id/txt_address"
                style="@style/TextViewStyle"
                android:layout_marginTop="30dp"
                android:text="@string/address_commerce"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_categories" />

            <EditText
                android:id="@+id/edt_street_type"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/street_type"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_address" />

            <EditText
                android:id="@+id/edt_street_name"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/street_name"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_street_type" />

            <EditText
                android:id="@+id/edt_street_number"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/street_number"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_street_name" />

            <EditText
                android:id="@+id/edt_city"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/localidad"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_street_number" />

            <EditText
                android:id="@+id/edt_state"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/municipio"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_city" />

            <EditText
                android:id="@+id/edt_postal_code"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/postal_code"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_state" />

            <TextView
                android:id="@+id/txt_auth"
                style="@style/TextViewStyle"
                android:layout_marginTop="30dp"
                android:text="@string/auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_postal_code" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_auth" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="30dp"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                style="@style/MainButtonStyle"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_radius_button"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />

            <LinearLayout
                android:id="@+id/ly_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

                <TextView
                    android:id="@+id/txt_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_msg_already_account"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_link_to_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="50dp"
                    android:text="@string/link_sign_in_msg"
                    android:textColor="@color/blue_link"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>