<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.fragments.editProfile.EditProfile"
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="610dp"
        android:background="@color/beige_sub_nav"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/usrEditProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/edt_profile"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
            android:textSize="34sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/editProfileName"
        style="@style/EditTextStyle"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/editProfileLastName"
        style="@style/EditTextStyle"
        android:layout_marginEnd="56dp"
        android:autofillHints="last name"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editProfileName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editProfileName"
        app:layout_constraintTop_toBottomOf="@+id/editProfileName"
        app:layout_constraintVertical_bias="0.044" />

    <EditText
        android:id="@+id/editProfilePhone"
        style="@style/EditTextStyle"
        android:autofillHints="telefono"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editProfileLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editProfileLastName"
        app:layout_constraintTop_toBottomOf="@+id/editProfileLastName"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/editProfileEmail"
        style="@style/EditTextStyle"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editProfilePhone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editProfilePhone"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePhone"
        app:layout_constraintVertical_bias="0.063" />

    <EditText
        android:id="@+id/editProfilePassword"
        style="@style/EditTextStyle"
        android:autofillHints="password"
        android:clickable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editProfileEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/editProfileEmail"
        app:layout_constraintVertical_bias="0.088" />


    <Button
        android:id="@+id/btnSaveProfile"
        style="@style/ButtonMaterial"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editProfilePassword"
        app:layout_constraintStart_toStartOf="@+id/editProfilePassword"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePassword"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/btnDeleteAccount"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del_profile"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/red_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveProfile"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/btnSaveProfile"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveProfile"
        app:layout_constraintVertical_bias="0.242" />

</androidx.constraintlayout.widget.ConstraintLayout>